# server/api/swagger/admin.yaml
@@ -2040,6 +2040,34 @@ paths:
       x-security-types:
         - bearer
         - hmac
+  /admin/order/match:
+    x-swagger-router-controller: admin
+    post:
+      description: Match an existing user order (admin only)
+      operationId: adminMatchOrder
+      tags:
+        - Admin
+      parameters:
+        - in: body
+          name: order
+          required: true
+          description: Match order request
+          schema:
+            $ref: "#/definitions/AdminMatchOrderRequest"
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/OrderResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/MessageResponse"
+      security:
+        - Token: []
+      x-security-types:
+        - bearer
+        - hmac
       x-token-permissions:
         - can_trade
   /admin/trades:
